# mcp-orch

./: .dockerignore  .env.aurora-sizing.md  .env.example  .env.hybrid.example  .env.production.example  .env.swp  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  COLLABORATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT-POLICY.md  DEPLOYMENT_SECURITY_CHECKLIST.md  Dockerfile.backend  Dockerfile.backend-dev  Dockerfile.frontend  LICENSE.md  README.md  README_KOR.md  _config.yml  alembic.ini  check_db_schema.py  check_tables.py  create_admin_user.py  debug_brave_search.py  debug_tools_api.py  docker-compose.hybrid.yml  docker-compose.monitoring.yml  docker-compose.yml  generate_test_token.py  index.md  install.sh  mcp-config.example.json  mcp-config.json.backup  pyproject.toml  requirements.txt  run_server.py  schema_analyzer.py  (+22 more)
.claude/: settings.local.json
.claude/workflow/: workflow_todo.md
.github/workflows/: claude.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.tasks/: workflow.md
configs/: enterprise.yml  minimal.yml  production.yml  standard.yml
configs/marketplace/: categories.json  marketplace.json  verified-servers.json
configs/systemd/: mcp-orchestrator.service
docs/: API_인증_및_확장_로드맵.md  Bearer_Authorization_가이드.md  Claude_Desktop_MCP_설정_가이드.md  JWT_Authorization_구현_가이드.md  LOGGING.md  MCP_SSE_통신_분석_및_문제해결_가이드.md  NextAuth_API_Proxy_가이드.md  NextJS_FastAPI_JWT_인증_패턴_가이드.md  PRD.md  PRD_서버상세페이지.md  PRD_서버상세페이지_v2.md  PRD_팀관리시스템.md  PRODUCTION_DEPLOYMENT.md  cline_설정_가이드.md  database-configuration.md  deployment-guide.md  github-settings-guide.md  marketing-strategy.md  mcp-endpoint-architecture-analysis.md  mcp-orch-refactoring-journey-report.md  mcp-protocol-initialization-guide.md  mcp-tool-filtering-system-design.md  mcp_agent_evolution_prd.md  mcp_proxy_방식_설정.md  mcp_proxy_비교_분석.md  mcp_표준_sse_구현_상태.md  projects-refactoring-analysis.md  projects-refactoring-checklist.md  projects-refactoring-plan.md  python-codebase-analysis copy.md  screenshots-guide.md  timezone-handling.md  troubleshooting.md  user-onboarding-guide.md  workflow_todo.md  설치_가이드.md  최종_Cline_설정_가이드.md  커스텀_SSE_Cline_설정_가이드.md  팀별_라우팅_시스템_가이드.md  표준_MCP_Cline_설정_가이드.md  (+1 more)
docs/appendix/: DATADOG_INTEGRATION.md
mcp-orch/.tasks/: workflow.md
migrations/: add_tool_call_log_indexes.sql  env.py
migrations/backup_20250623_1840/: 20250603_1029-807576bbae77_add_user_management_tables.py  20250606_1053-e9c1c46137a1_add_project_based_architecture.py  20250611_0843-c0f8f6824b89_add_cwd_field_to_mcp_servers.py  20250611_1421-8a155c2700b2_add_server_logs_table.py  20250612_1206-e3fc9ce4be03_add_project_security_settings.py  20250613_1347-67bd89d2da13_add_is_admin_field_to_users_table.py  20250616_2358-661563b93f3d_add_timestamps_to_users_table.py  20250620_0822-725cb65d62b1_add_workerconfig_table_for_persistent_.py  20250620_0857-d5972937e80e_add_server_type_field_to_mcp_servers_.py  20250621_1030-add_encryption_fields_to_mcp_servers.py  20250623_1840-rename_server_type_to_compatibility_mode.py
migrations/backup_20250626_145950_versions/: 20250625_0819-38d4bd81b787_initial_database_schema_with_all_tables.py  20250625_1910-jwt_auth_unification.py
scripts/: backend.sh  database.sh  dev-backend.sh  dev-database.sh  dev-frontend.sh  dev-setup.sh  frontend-restart.sh  frontend.sh  health-check.sh  logs-mcp-orch.sh  logs.sh  migrate.sh  quickstart-external-db.sh  quickstart-hybrid.sh  quickstart.sh  restart-backend.sh  setup-production.sh  setup-standard.sh  shutdown.sh  start-mcp-orch.sh  start-minimal.sh  status.sh  stop-mcp-orch.sh  system-status.sh
src/mcp_orch/: cli.py  (+4 more)
web/: next.config.ts  package.json  pnpm-lock.yaml
(+363 files in other folders)
